# High-Performance-Computing

./: .gitignore  README.md  dataAnalize.py  hw2.tgz  sakfy6_hw1.tgz  sakfy6_hw2.tgz  sakfy6_hw3.tgz
CSV-Vector-Parser/: CMakeLists.txt  README.md
HW0/: CMakeLists.txt
HW0/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  runner
HW0/include/: parser.hpp
HW0/src/: parser.cpp
HW0/test/: runner.cpp
IPC-Vector-Distance-Calculator/: plotter.py
IPC-Vector-Distance-Calculator/include/: vectorMatch.hpp
IPC-Vector-Distance-Calculator/test/: runner.cpp
Matrix-Multiplication-Speedup/analyze/: hw1_analyze.cpp  plot_hw1.logy.gnu
Matrix-Multiplication-Speedup/src/: Makefile  callgrind.out.21880
Threaded-Vector-Distance-Calculator/: README.md
ipc_shared_memory/: CMakeLists.txt  README.md  plotter.py
ipc_shared_memory/include/: parser.hpp  vectorMatch.hpp
ipc_shared_memory/src/: parser.cpp  vectorMatch.cpp
ipc_shared_memory/test/: runner.cpp
pdfs/: opt3.txt
sakfy6_hw0/: README.md
sakfy6_hw0/include/: parser.hpp
sakfy6_hw0/src/: parser.cpp
sakfy6_hw0/test/: runner.cpp
sakfy6_hw1/: opt3.txt  test.txt
sakfy6_hw1/analyze/: Makefile  hw1_analyze  hw1_analyze.cpp  p1.f.data  p1.m1.data  p1.time  plot_hw1.gnu  plot_hw1.logx.gnu  plot_hw1.logxy.gnu
sakfy6_hw1/pdfs/: baseTesting.txt  finalopt.txt  opt2.txt  opt5.txt
sakfy6_hw3/: CMakeLists.txt
thread_vector_compare/: CMakeLists.txt  plotter.py
thread_vector_compare/include/: vectorMatch.hpp
thread_vector_compare/src/: vectorMatch.cpp
thread_vector_compare/test/: runner.cpp
(+7 files in other folders)
